// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Links renderer should render for mixed @see and @link tags 1`] = `
<div>
  <div>
    More information
  </div>
  <ul>
    <li>
      <span
        class="base-0-0"
      >
        Test description
      </span>
    </li>
    <li>
      <span
        class="base-0-0"
      >
        Test description 2
      </span>
    </li>
    <li>
      <span
        class="base-0-0"
      >
        Test description
      </span>
    </li>
    <li>
      <span
        class="base-0-0"
      >
        <a
          class="a-0-2"
          href="#TestLink"
        >
          Test
        </a>
      </span>
    </li>
  </ul>
</div>
`;

exports[`Links renderer should render for one @link tag 1`] = `
<div>
  <div>
    More information
  </div>
  <ul>
    <li>
      <span
        class="base-0-0"
      >
        Test description
      </span>
    </li>
  </ul>
</div>
`;

exports[`Links renderer should render for two @link tags 1`] = `
<div>
  <div>
    More information
  </div>
  <ul>
    <li>
      <span
        class="base-0-0"
      >
        Test description
      </span>
    </li>
    <li>
      <span
        class="base-0-0"
      >
        <a
          class="a-0-2"
          href="#TestLink"
        >
          Test
        </a>
      </span>
    </li>
  </ul>
</div>
`;

exports[`Links renderer should render for two @see tags 1`] = `
<div>
  <div>
    More information
  </div>
  <ul>
    <li>
      <span
        class="base-0-0"
      >
        Test description
      </span>
    </li>
    <li>
      <span
        class="base-0-0"
      >
        Test description 2
      </span>
    </li>
  </ul>
</div>
`;
